feat: javadoc, clean up